Add Total Irrigated Acres and Total Pumped Volume to stream flow zone map details

--- a/Source/Zybach.Web/src/app/pages/dashboard/dashboard.component.html
+++ b/Source/Zybach.Web/src/app/pages/dashboard/dashboard.component.html
@@ -64,6 +64,11 @@
                                 <dd>{{getAcreage(selectedStreamflowZone) | number: '1.0-2'}}</dd>
                                 <dt>Average Pumping Depth:</dt>
                                 <dd>{{getPumpingDepth(selectedStreamflowZone) | number: '1.0-2'}} ac-in/ac</dd>
+                                <dt>Total Irrigated Acres:</dt>
+                                <dd>{{getTotalIrrigatedAcres(selectedStreamflowZone) | number: '1.0-2'}} ac</dd>
+                                <dt>Total Pumped Volume:</dt>
+                                <dd>{{getTotalPumpedVolume(selectedStreamflowZone) | number: '1.0-2'}} ac-in</dd>
+
                             </dl>
                         </div>
                     </div>
