ZYB-92 Sensor Status Map Clone the well explorer and well map components as sensor status and sensor status map

--- a/Source/Zybach.Web/src/app/shared/components/header-nav/header-nav.component.html
+++ b/Source/Zybach.Web/src/app/shared/components/header-nav/header-nav.component.html
@@ -44,6 +44,9 @@
                     Manage
                 </a>
                 <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                    <a routerLink="/sensor-status" class="dropdown-item">
+                        Sensor Status
+                    </a>
                     <a routerLink="/users" class="dropdown-item">
                         Users
                     </a>
