ZYB-77 Chemigation Landing Page Stub out new chemigation landing page and api endpoint for chemigation inspection summaries

--- a/Source/Zybach.Web/src/app/shared/components/header-nav/header-nav.component.html
+++ b/Source/Zybach.Web/src/app/shared/components/header-nav/header-nav.component.html
@@ -38,6 +38,9 @@
             <li class="nav-item" routerLinkActive="active" *ngIf="!isHomepageCurrentPage()">
                 <a routerLink="/" class="nav-link">Home</a>
             </li>
+            <li class="nav-item" routerLinkActive="active" >
+                <a routerLink="/chemigation" class="nav-link">Chemigation</a>
+            </li>
             <li class="nav-item dropdown" routerLinkActive="active" *ngIf="isAdministrator()">
                 <a href="#" class="nav-link dropdown-toggle" role="button" data-toggle="dropdown" aria-haspopup="true"
                     aria-expanded="false">
