--- a/Source/Zybach.Web/src/app/pages/chemigation-landing/chemigation-landing.component.html
+++ b/Source/Zybach.Web/src/app/pages/chemigation-landing/chemigation-landing.component.html
@@ -8,7 +8,7 @@
         <div class="col-12">
 
             <ag-grid-angular #inspectionsGrid style="width: 100%; height: 300px;" class="ag-theme-balham"
-                [rowData]="inspections" [columnDefs]="columnDefs" [pagination]="true" [paginationPageSize]="100">
+                [rowData]="inspectionSummaries" [columnDefs]="columnDefs" [pagination]="true" [paginationPageSize]="100">
             </ag-grid-angular>
         </div>
     </div>
