ZYB 92 Sensor Status Map Change time ranges for color coding Add grid of sensors with message age > eight hours

--- a/Source/Zybach.Web/src/app/pages/sensor-status-map-popup/sensor-status-map-popup.component.html
+++ b/Source/Zybach.Web/src/app/pages/sensor-status-map-popup/sensor-status-map-popup.component.html
@@ -3,5 +3,5 @@
 
 <div *ngFor="let sensor of sensors">
     <label class="rowHeader">{{getSensorDisplay(sensor)}}</label><br />
-    Last Message Received: {{getLastMessageReceived(sensor)}}
+    <label class="rowHeader">Last Message Received:</label> {{getLastMessageReceived(sensor)}}
 </div>
