--- a/Source/Zybach.Web/src/app/pages/sensor-status/sensor-status.component.html
+++ b/Source/Zybach.Web/src/app/pages/sensor-status/sensor-status.component.html
@@ -8,5 +8,12 @@
 </div>
 
 <div class="container navCaretMargin" *ngIf="wellsGeoJson">
+    <div class="col-12 col-md-6">
+        <h2 class="d-inline-block">Sensor Status</h2>
+    </div>
     <zybach-sensor-status-map #wellMap [wellsGeoJson]="wellsGeoJson"></zybach-sensor-status-map>
+
+    <ag-grid-angular #redSensorsGrid style="width: 100%; height: 300px;" class="ag-theme-balham mt-2"
+        [rowData]="redSensors" [columnDefs]="columnDefs" [pagination]="true" [paginationPageSize]="100">
+    </ag-grid-angular>
 </div>
