--- a/Source/Zybach.Web/src/app/pages/well-detail/well-detail.component.html
+++ b/Source/Zybach.Web/src/app/pages/well-detail/well-detail.component.html
@@ -146,6 +146,7 @@
 
                     </div>
                     <div *ngIf="!noTimeSeriesData" id="{{chartID}}" style="width:100%; min-height: 340px;"></div>
+                    <em *ngIf="!noTimeSeriesData">All data are displayed in Central Daylight Time</em>
                     <em *ngIf="noTimeSeriesData">No time series data available for this well.</em>
                 </div>
             </div>
