Import AgHubWells and IrrigatedAcres Make changes to Manager Dashboard front-end to work with C# API Update GeoOptixService to filter out non-installation method schemas

--- a/Source/Zybach.Web/src/app/pages/dashboard/dashboard.component.html
+++ b/Source/Zybach.Web/src/app/pages/dashboard/dashboard.component.html
@@ -59,7 +59,7 @@
                         <div class="col-3" *ngIf = "selectedStreamflowZone">
                             <dl>
                                 <dt>Stream Flow Zone Name:</dt>
-                                <dd>{{selectedStreamflowZone.properties.ZoneName}}</dd>
+                                <dd>{{selectedStreamflowZone.StreamFlowZoneName}}</dd>
                                 <dt>Acres:</dt>
                                 <dd>{{getAcreage(selectedStreamflowZone) | number: '1.0-2'}}</dd>
                                 <dt>Average Pumping Depth:</dt>
