--- a/Source/Zybach.Web/src/app/shared/components/header-nav/header-nav.component.html
+++ b/Source/Zybach.Web/src/app/shared/components/header-nav/header-nav.component.html
@@ -89,23 +89,23 @@
     <div class="navbar-collapse collapse pt-2 pt-md-0" id="navbar2" *ngIf="isAuthenticated() && !isUnassigned()">
         <ul class="navbar-nav">
             <li class="nav-item dashboardItem" [ngClass]="{'currentPage': isDashboardCurrentPage()}">
-                <a class="nav-link" routerLinkActive="active" *ngIf="isAdministrator()" routerLink="/dashboard"
+                <a class="nav-link" routerLinkActive="active" routerLink="/dashboard"
                     style="padding-top: 0;">
                     <img src="/assets/main/nav/dashboard.png" /> Dashboard
                 </a>
             </li>
             <li class="nav-item mapItem" [ngClass]="{'currentPage': isMapCurrentPage()}">
-                <a class="nav-link" routerLinkActive="active" *ngIf="isAdministrator()" routerLink="/well-map">
+                <a class="nav-link" routerLinkActive="active" routerLink="/well-map">
                     <img src="/assets/main/nav/map.png" /> Well Map
                 </a>
             </li>
             <li class="nav-item sensorStatusItem" [ngClass]="{'currentPage': isSensorStatusCurrentPage()}">
-                <a class="nav-link" routerLinkActive="active" *ngIf="isAdministrator()" routerLink="/sensor-status">
+                <a class="nav-link" routerLinkActive="active" routerLink="/sensor-status">
                     <img src="/assets/main/nav/sensor_status.png" /> Sensor Status
                 </a>
             </li>
             <li class="nav-item chemigationItem" [ngClass]="{'currentPage': isChemigationCurrentPage()}">
-                <a class="nav-link" routerLinkActive="active" *ngIf="isAdministrator()" routerLink="/chemigation">
+                <a class="nav-link" routerLinkActive="active" routerLink="/chemigation">
                     <img src="/assets/main/nav/chemigation.png" /> Chemigation
                 </a>
             </li>
