--- a/Source/Zybach.Web/src/app/pages/well-detail/well-detail.component.html
+++ b/Source/Zybach.Web/src/app/pages/well-detail/well-detail.component.html
@@ -22,6 +22,10 @@
                                 <div class="col-12  col-sm-6">{{well.WellRegistrationID}}</div>
                                 <div class="col-12  col-sm-6 label"><strong>TPID: </strong></div>
                                 <div class="col-12  col-sm-6">{{well.WellTPID}}</div>
+                                <div class="col-12  col-sm-6 label"><strong>Landowner: </strong></div>
+                                <div class="col-12  col-sm-6">{{well.LandownerName}}</div>
+                                <div class="col-12  col-sm-6 label"><strong>Field Name: </strong></div>
+                                <div class="col-12  col-sm-6">{{well.FieldName}}</div>
                                 <div class="col-12  col-sm-6 label"><strong>{{getDataSourcesLabel()}}</strong></div>
                                 <div class="col-12  col-sm-6">
                                     <p *ngFor="let sensor of getSensors()" class="m-0">
