--- a/Source/Zybach.Web/src/app/pages/sensor-status/sensor-status.component.html
+++ b/Source/Zybach.Web/src/app/pages/sensor-status/sensor-status.component.html
@@ -24,6 +24,6 @@
     </div>
     <ag-grid-angular #redSensorsGrid style="width: 100%; height: 300px;" class="ag-theme-balham mt-2"
         [rowData]="redSensors" [columnDefs]="columnDefs" [pagination]="true" [paginationPageSize]="100" [rowSelection]="'multiple'"
-        (gridReady)="onGridReady($event)">
+        (gridReady)="onGridReady($event)" (selectionChanged)="onSelectionChanged($event)">
     </ag-grid-angular>
 </div>
