--- a/Source/Zybach.Web/src/app/pages/dashboard/dashboard.component.html
+++ b/Source/Zybach.Web/src/app/pages/dashboard/dashboard.component.html
@@ -1,21 +1,25 @@
 <div class="container navCaretMargin">
     <div class="row">
-        <div class="col-12 col-md-6">
+        <div class="col-12">
             <h2 class="d-inline-block">Manager Dashboard</h2>
-        </div>
-        <div class="col-12 col-md-6 text-right">
-            <div class="float-right pl-2">
-                <zybach-water-year-select [(selectedYear)]="yearToDisplay" (selectedYearChange)="updateAnnualData()"
-                    [(allYearsSelected)]="allYearsSelected" (allYearsSelectedChange)="updateAnnualData()">
-                </zybach-water-year-select>
-            </div>
         </div>
     </div>
     <div class="row mb-2">
         <div class="col-12">
             <div class="card">
                 <div class="card-header">
-                    Water Usage Maps
+                    <div class="row">
+                        <div class="col-12 col-md-6 d-flex align-items-center">
+                            Water Usage Maps
+                        </div>
+                        <div class="col-12 col-md-6 text-right">
+                            <div class="float-right pl-2">
+                                <zybach-water-year-select [(selectedYear)]="yearToDisplay" (selectedYearChange)="updateAnnualData()"
+                                    [(allYearsSelected)]="allYearsSelected" (allYearsSelectedChange)="updateAnnualData()">
+                                </zybach-water-year-select>
+                            </div>
+                        </div>
+                    </div>
                 </div>
                 <div class="card-body">
                     <div class="row">
