--- a/Source/Zybach.Web/src/app/pages/sensor-status-map-popup/sensor-status-map-popup.component.html
+++ b/Source/Zybach.Web/src/app/pages/sensor-status-map-popup/sensor-status-map-popup.component.html
@@ -1,6 +1,6 @@
 <label class="rowHeader">Registration #:</label> <a routerLink="/wells/{{registrationID}}">{{registrationID}}</a><br/>
 
-<label class="rowHeader">Landowner:</label>{{landownerName}}
+<label class="rowHeader">AgHub Registered User:</label>{{AgHubRegisteredUser}}
 <br/>
 <label class="rowHeader">Field Name:</label>{{fieldName}}
 
