updated instruction text

--- a/Source/Zybach.Web/src/app/pages/well-new/well-new.component.html
+++ b/Source/Zybach.Web/src/app/pages/well-new/well-new.component.html
@@ -28,8 +28,7 @@
                 <div>
                     To set the location of the Well:
                     <ul>
-                        <li>Place the BMP at your current location (using GPS if available) <strong>OR</strong></li>
-                        <li>Click on the location of the BMP on the map <strong>OR</strong></li>
+                        <li>Click on the location of the Well on the map <strong>OR</strong></li>
                         <li>Directly type in the latitude and longitude</li>
                     </ul>
                 </div>
