--- a/Source/Zybach.Web/src/app/pages/well-explorer/well-explorer.component.html
+++ b/Source/Zybach.Web/src/app/pages/well-explorer/well-explorer.component.html
@@ -18,7 +18,7 @@
         <div class="row my-2">
             <div class="col">
                 <button type="button" class="btn btn-zybach btn-sm float-right" (click)="downloadCsv()"><span class="fas fa-download"></span> Download CSV</button>
-                <a class="btn btn-zybach btn-sm mr-3 float-right" routerLink="/new-well">New Well</a>
+                <a class="btn btn-zybach btn-sm mr-3 float-right" routerLink="/new-well"><span class="fas fa-plus"></span> New Well</a>
             </div>
         </div>
         <ag-grid-angular #wellsGrid style="width: 100%; height: 500px;" class="ag-theme-balham" [rowData]="wells"
