added property InAgHub which should truly check if it is in Aghub; old code was checking if WellTPID is not null which is not always tryue for Aghub wells

--- a/Source/Zybach.Web/src/app/pages/well-detail/well-detail.component.html
+++ b/Source/Zybach.Web/src/app/pages/well-detail/well-detail.component.html
@@ -20,6 +20,10 @@
                             <div class="row" *ngIf="well">
                                 <div class="col-12  col-sm-6 label"><strong>Registration ID: </strong> </div>
                                 <div class="col-12  col-sm-6">{{well.WellRegistrationID}}</div>
+                                <div class="col-12  col-sm-6 label"><strong>In AgHub? </strong></div>
+                                <div class="col-12  col-sm-6">{{well.InAgHub ? "Yes" : "No"}}</div>
+                                <div class="col-12  col-sm-6 label"><strong>In GeoOptix? </strong></div>
+                                <div class="col-12  col-sm-6">{{well.InGeoOptix ? "Yes" : "No"}}</div>
                                 <div class="col-12  col-sm-6 label"><strong>TPID: </strong></div>
                                 <div class="col-12  col-sm-6">{{well.WellTPID}}</div>
                                 <div class="col-12  col-sm-6 label"><strong>AgHub Registered User: </strong></div>
