--- a/Source/Zybach.Web/src/app/pages/reports-list/reports-list.component.html
+++ b/Source/Zybach.Web/src/app/pages/reports-list/reports-list.component.html
@@ -21,8 +21,14 @@
     <a class="btn btn-zybach btn-sm mr-3 float-right" routerLink="/reports/new"><span class="fas fa-plus"></span> New Report Template</a>
     <button (click)="generateReport()" [disabled]="isLoadingSubmit" class="btn btn-zybach btn-sm mr-3 float-right">
         <span *ngIf="isLoadingSubmit" class="fa fa-spinner loading-spinner"></span>
-        Generate Test Report
+        Generate Report
     </button>
+    <select name="ReportTemplateID" class="form-control  mr-3 float-right" style="width:auto; min-width: 100px;" [(ngModel)]="selectedReportTemplateID" required>
+        <option value=""></option>
+        <option *ngFor="let reportTemplate of reportTemplates" [value]="reportTemplate.ReportTemplateID">
+            {{reportTemplate.DisplayName}}
+        </option>
+    </select>
 
     <div class="table-responsive">
         <ag-grid-angular #reportTemplatesGrid style="width: 100%; height: 800px;" class="ag-theme-balham" [rowData]="rowData"
