update release script 21 to include adding custom rich text for chemigation permit page. Initial front-end work on navbar and chemigation landing page

--- a/Source/Zybach.Web/src/app/shared/components/header-nav/header-nav.component.scss
+++ b/Source/Zybach.Web/src/app/shared/components/header-nav/header-nav.component.scss
@@ -65,6 +65,10 @@
         height: 100%;
       }
     }
+
+    .dropdown-item{
+      padding: 0.25rem 0.75rem;
+    }
         
     a.nav-link
     {
@@ -113,7 +117,7 @@
       padding-right: 16px;
     }
   }
-  
+
   // title bar and current page header
   .navbar-responsive-current-page{
     color: white;
