--- a/Source/Zybach.Web/src/app/pages/chemigation-landing/chemigation-landing.component.html
+++ b/Source/Zybach.Web/src/app/pages/chemigation-landing/chemigation-landing.component.html
@@ -1,12 +1,19 @@
 <div class="container navCaretMargin">
+    <app-alert-display></app-alert-display>
     <div class="row">
         <div class="col-12">
-            <h2 class="d-inline-block">Chemigation</h2>
+            <h2 class="d-inline-block">Chemigation Permits</h2>
+            <custom-rich-text [customRichTextTypeID]="richTextTypeID"></custom-rich-text>
         </div>
     </div>
     <div class="row">
-        <div class="col-12">
-
+        <div class="container col-12">
+            <div class="row my-2">
+                <div class="col">
+                    <a class="btn btn-zybach btn-md mr-3 float-right" routerLink="/create-renewals"><span class="fas fa-plus"></span> Create Annual Renewals </a>
+                    <a class="btn btn-zybach btn-md mr-3 float-right" routerLink="/new-chem-permit"><span class="fas fa-plus"></span> New Chemigation Permit </a>
+                </div>
+            </div>
             <ag-grid-angular #inspectionsGrid style="width: 100%; height: 300px;" class="ag-theme-balham"
                 [rowData]="inspectionSummaries" [columnDefs]="columnDefs" [pagination]="true" [paginationPageSize]="100">
             </ag-grid-angular>
