ZYB-130: rework: don't add 'AsNoTracking()' to GetReportTemplatesImpl() when it is for the Update method; minor UI work

--- a/Source/Zybach.Web/src/scss/_grids.scss
+++ b/Source/Zybach.Web/src/scss/_grids.scss
@@ -20,4 +20,8 @@ $grid-header-background: #0076C0;
   .ag-header-icon {
     color: #fff;
   }
+
+  .ag-header-cell-menu-button {
+    opacity: 1 !important;
+  }
 }
