--- a/Source/Zybach.Web/src/app/pages/report-template-edit/report-template-edit.component.html
+++ b/Source/Zybach.Web/src/app/pages/report-template-edit/report-template-edit.component.html
@@ -45,13 +45,14 @@
                 </div>
                 <div class="form-group mt-4">
                     <div class="col-sm-5 control-label">
-                        <label>File</label>
+                        <label class="required" *ngIf="reportTemplateID === undefined">File</label>
+                        <label *ngIf="reportTemplateID !== undefined">File</label>
                     </div>
-                    <div class="input-group ml-3 p-0 col-sm-7">
+                    <div class="input-group col-sm-7">
                         <div class="custom-file">
                             <input type="file" class="custom-file-input"
                                 id="fileResource"
-                                #fileUpload (change)="fileEvent()">
+                                #fileUpload (change)="fileEvent()">    
                             <label class="custom-file-label"
                                 for="fileResource">{{getFileName()}}</label>
                         </div>
@@ -70,9 +71,9 @@
                 <i class="fas fa-bolt"></i> Required field
             </div>
             <div class="col-sm text-right">
-                <button type="submit" class="btn btn-zybach" [disabled]="!newReportTemplateForm.form.valid || isLoadingSubmit">
+                <button type="submit" class="btn btn-zybach" [disabled]="!newReportTemplateForm.form.valid || isLoadingSubmit || !requiredFileIsUploaded">
                     <span *ngIf="isLoadingSubmit" class="fa fa-spinner loading-spinner"></span>
-                    Submit
+                    Save
                 </button>
                 <a class="btn btn-secondary ml-1" routerLink="/reports">Cancel</a>
             </div>
