--- a/Source/Zybach.Web/src/app/pages/reports-list/reports-list.component.html
+++ b/Source/Zybach.Web/src/app/pages/reports-list/reports-list.component.html
@@ -23,7 +23,7 @@
         <span *ngIf="isLoadingSubmit" class="fa fa-spinner loading-spinner"></span>
         Generate Report
     </button>
-    <select name="ReportTemplateID" class="form-control  mr-3 float-right" style="width:auto; min-width: 100px;" [(ngModel)]="selectedReportTemplateID" required>
+    <select name="ReportTemplateID" class="form-control mr-3 float-right mb-2" style="width:auto; min-width: 100px;" [(ngModel)]="selectedReportTemplateID" required>
         <option value=""></option>
         <option *ngFor="let reportTemplate of reportTemplates" [value]="reportTemplate.ReportTemplateID">
             {{reportTemplate.DisplayName}}
