update lookup table CustomRichText to include new chemigation entry, basic CRUD on front end

--- a/Source/Zybach.Web/src/app/shared/components/header-nav/header-nav.component.html
+++ b/Source/Zybach.Web/src/app/shared/components/header-nav/header-nav.component.html
@@ -116,7 +116,7 @@
                     Permits and Inspections
                 </a>
                 <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                    <a routerLink="/chemigation" class="dropdown-item">
+                    <a routerLink="/chemigation-permits" class="dropdown-item">
                         Chemigation Permits
                     </a>
                     <a routerLink="/" class="dropdown-item disabled">
