--- a/Source/Zybach.Web/src/app/pages/chemigation-landing/chemigation-landing.component.html
+++ b/Source/Zybach.Web/src/app/pages/chemigation-landing/chemigation-landing.component.html
@@ -14,9 +14,16 @@
                     <a class="btn btn-zybach btn-md mr-3 float-right" routerLink="/create-renewals"><span class="fas fa-plus"></span> Create Annual Renewals </a>
                 </div>
             </div>
-            <ag-grid-angular #inspectionsGrid style="width: 100%; height: 300px;" class="ag-theme-balham"
+            
+            <!-- <ag-grid-angular #inspectionsGrid style="width: 100%; height: 300px;" class="ag-theme-balham"
                 [rowData]="inspectionSummaries" [columnDefs]="columnDefs" [pagination]="true" [paginationPageSize]="100">
-            </ag-grid-angular>
+            </ag-grid-angular> -->
+            <div class="table-responsive">
+                <ag-grid-angular #permitGrid style="width: 100%; height: 500px;" class="ag-theme-balham" [rowData]="inspectionSummaries"
+                [columnDefs]="columnDefs" [pagination]="true" [suppressMenuHide]="true" [paginationPageSize]="100">
+                </ag-grid-angular>
+            </div>
         </div>
     </div>
 </div>
+
