--- a/Source/Zybach.Web/src/app/pages/chemigation-new-permit/chemigation-new-permit.component.html
+++ b/Source/Zybach.Web/src/app/pages/chemigation-new-permit/chemigation-new-permit.component.html
@@ -9,65 +9,60 @@
 <div class="container">
     <app-alert-display></app-alert-display>
     <form (ngSubmit)="onSubmit(newChemigationPermitForm)" #newChemigationPermitForm="ngForm">
-        <!-- <div class="row">
+        <div class="row">
             <div class="col">
-                <div class="form-group mt-4">
+                <!-- <div class="form-group mt-4">
                     <div class="col-sm-5 control-label">
-                        <label class="required">Well Registration ID</label>
+                        <label class="required"></label>
                     </div>
                     <div class="col-sm-7">
                         <input type="text" class="form-control" name="WellRegistrationID"
                             placeholder="Well Registration ID" required [(ngModel)]="model.WellRegistrationID" />
                     </div>
+                </div> -->
+                <div class="form-group mt-4">
+                    <div class="col-sm-3 control-label text-right">
+                        <p class="mb-0"> <label class="required"><strong>Permit Status</strong></label></p>
+                    </div>
+                    <div class="col-sm-5">
+                        <select name="PermitStatusID" class="form-control" [(ngModel)]="model.ChemigationPermitStatusID"
+                            required>
+                            <option selected disabled value=""></option>
+                            <option *ngFor="let permitStatus of permitStatuses"
+                                [value]="permitStatus.ChemigationPermitStatusID">
+                                {{permitStatus.ChemigationPermitStatusDisplayName}}
+                            </option>
+                        </select>
+                    </div>
+                </div>
+                <div class="form-group mt-4">
+                    <div class="col-sm-3 control-label text-right">
+                        <p class="mb-0"> <label class="required"><strong>Date Received</strong></label></p>
+                    </div>
+                    <div class="col-sm-5">
+                        <div class="input-group">
+                            <input class="form-control" placeholder="yyyy-mm-dd" name="dp" 
+                            [(ngModel)]="model.DateReceived" ngbDatepicker #d="ngbDatepicker" required>
+                            <div class="input-group-append">
+                                <button class="btn btn-outline-secondary far fa-calendar" (click)="d.toggle()" type="button"></button>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
-        <hr />
-        <div class="row">
-            <div class="col-sm-6">
-                <div>
-                    To set the location of the Well:
-                    <ul>
-                        <li>Click on the location of the Well on the map <strong>OR</strong></li>
-                        <li>Directly type in the latitude and longitude</li>
-                    </ul>
-                </div>
 
-                <div class="form-group mt-4">
-                    <div class="col-sm-5 control-label">
-                        <label class="required">Latitude</label>
-                    </div>
-                    <div class="col-sm-7">
-                        <input type="number" class="form-control" name="Latitude" required (change)="onLatLngChange()"
-                            [(ngModel)]="model.Latitude" step=".001" />
-                    </div>
-                </div>
-                <div class="form-group mt-4">
-                    <div class="col-sm-5 control-label">
-                        <label class="required">Longitude</label>
-                    </div>
-                    <div class="col-sm-7">
-                        <input type="number" class="form-control" name="Longitude" required (change)="onLatLngChange()"
-                            [(ngModel)]="model.Longitude" step=".001" />
-                    </div>
-                </div>
-            </div>
-            <div class="col-sm-4">
-                <div id="{{mapID}}" style="height:500px;"></div>
-            </div>
-        </div>
-        <hr />
         <div class="row mt-4">
             <div class="col-sm">
                 <i class="fas fa-bolt"></i> Required field
             </div>
             <div class="col-sm text-right">
-                <button type="submit" class="btn btn-zybach" [disabled]="!newWellForm.form.valid || isLoadingSubmit">
+                <button type="submit" class="btn btn-zybach" [disabled]="!newChemigationPermitForm.form.valid || isLoadingSubmit">
                     <span *ngIf="isLoadingSubmit" class="fa fa-spinner loading-spinner"></span>
                     Submit
                 </button>
-                <a class="btn btn-secondary ml-1" routerLink="/well-map">Cancel</a>
+                <a class="btn btn-secondary ml-1" routerLink="/chemigation-permits">Cancel</a>
             </div>
-        </div> -->
+        </div>
     </form>
 </div>
