--- a/Source/Zybach.Web/src/app/pages/chemigation-permit-detail/chemigation-permit-detail.component.html
+++ b/Source/Zybach.Web/src/app/pages/chemigation-permit-detail/chemigation-permit-detail.component.html
@@ -1,1 +1,40 @@
-<p>chemigation-permit-detail works!</p>
+<nav aria-label="breadcrumb">
+    <ol class="breadcrumb">
+        <li class="breadcrumb-item">
+            <a routerLink="/chemigation-permits">Chemigation Permits</a>
+        </li>
+        <li class="breadcrumb-item active" aria-current="page">Chemigation Permit #{{chemigationPermit?.ChemigationPermitNumber}}</li>
+    </ol>
+</nav>
+<div class="container">
+    <app-alert-display></app-alert-display>
+    <div class="row">
+        <div class="col-sm-6">
+            <div class="card">
+                <div class="card-header">
+                    <a *ngIf="currentUserIsAdmin() && chemigationPermit" class="btn btn-rio btn-sm float-right"
+                    routerLink="/chemigation-permits/<{{chemigationPermit.ChemigationPermitNumber}}>/edit">
+                    <span class="fas fa-edit"></span> Edit
+                </a>
+                    Chemigation Permit #{{chemigationPermit?.ChemigationPermitNumber}}
+                </div>
+                <div class="card-body">
+                    <div class="row" *ngIf="chemigationPermit">
+                        <div class="col-12  col-sm-6 label"><strong>Permit Status: </strong></div>
+                        <div class="col-12  col-sm-6">{{chemigationPermit.ChemigationPermitStatus.ChemigationPermitStatusDisplayName}}</div>
+                        <div class="col-12  col-sm-6 label"><strong>Township, Range, Section: </strong></div>
+                        <div class="col-12  col-sm-6">{{chemigationPermit.TownshipRangeSection}}</div>
+                        <div class="col-12  col-sm-6 label"><strong>Date Received: </strong></div>
+                        <div class="col-12  col-sm-6">{{chemigationPermit.DateReceived | date:'shortDate'}}</div>
+                    </div>
+                    <div class="row" *ngIf="!chemigationPermit">
+                        <div class="col text-center">
+                            <span class="fas fa-spinner loading-spinner"></span>
+                            <p>Loading...</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
