working edit chemigation permit page

--- a/Source/Zybach.Web/src/app/pages/chemigation-permit-detail/chemigation-permit-detail.component.html
+++ b/Source/Zybach.Web/src/app/pages/chemigation-permit-detail/chemigation-permit-detail.component.html
@@ -13,7 +13,7 @@
             <div class="card">
                 <div class="card-header">
                     <a *ngIf="currentUserIsAdmin() && chemigationPermit" class="btn btn-rio btn-sm float-right"
-                    routerLink="/chemigation-permits/<{{chemigationPermit.ChemigationPermitNumber}}>/edit">
+                    routerLink="/chemigation-permits/{{chemigationPermit.ChemigationPermitNumber}}/edit">
                     <span class="fas fa-edit"></span> Edit
                 </a>
                     Chemigation Permit #{{chemigationPermit?.ChemigationPermitNumber}}
