--- a/Source/Zybach.Web/src/app/pages/chemigation-permit-edit/chemigation-permit-edit.component.html
+++ b/Source/Zybach.Web/src/app/pages/chemigation-permit-edit/chemigation-permit-edit.component.html
@@ -3,21 +3,26 @@
         <li class="breadcrumb-item">
             <a routerLink="/chemigation-permits">Chemigation Permits</a>
         </li>
-        <li class="breadcrumb-item active" aria-current="page">New Chemigation Permit</li>
+        <li class="breadcrumb-item">
+            <a routerLink="/chemigation-permits/{{chemigationPermit?.ChemigationPermitNumber}}">
+                {{chemigationPermit?.ChemigationPermitNumber}}
+            </a>
+        </li>
+        <li class="breadcrumb-item active" aria-current="page">Edit</li>
     </ol>
 </nav>
-<div class="container">
+<div class="container"  *ngIf="model">
     <app-alert-display></app-alert-display>
-    <form (ngSubmit)="onSubmit(newChemigationPermitForm)" #newChemigationPermitForm="ngForm">
+    <form (ngSubmit)="onSubmit(editChemigationPermitForm)" #editChemigationPermitForm="ngForm">
         <div class="row">
-            <div class="col">
+            <div class="col">  
                 <div class="form-group mt-4">
-                    <div class="col-sm-3 control-label text-left">
+                    <div class="col-sm-3 control-label">
                         <label class="required"><strong>Chemigation Permit Number</strong></label>
                     </div>
                     <div class="col-sm-5">
-                        <input type="text" class="form-control" name="ChemigationPermitNumber"
-                            placeholder="Permit Number" required [(ngModel)]="model.ChemigationPermitNumber" />
+                        <input type="text" class="form-control" name="ChemigationPermitNumber" readonly
+                            required [value]="model.ChemigationPermitNumber" [(ngModel)]="model.ChemigationPermitNumber" />
                     </div>
                 </div>
                 <div class="form-group mt-4">
@@ -25,7 +30,7 @@
                         <label class="required"><strong>Township-Range-Section</strong></label>
                     </div>
                     <div class="col-sm-5">
-                        <input type="text" class="form-control" name="TownshipRangeSection"
+                        <input type="text" class="form-control" name="TownshipRangeSection" readonly
                             placeholder="Township-Range-Section" required [(ngModel)]="model.TownshipRangeSection" />
                     </div>
                 </div>
@@ -36,7 +41,6 @@
                     <div class="col-sm-5">
                         <select name="PermitStatusID" class="form-control" [(ngModel)]="model.ChemigationPermitStatusID"
                             required>
-                            <option selected disabled></option>
                             <option *ngFor="let permitStatus of permitStatuses"
                                 [value]="permitStatus.ChemigationPermitStatusID">
                                 {{permitStatus.ChemigationPermitStatusDisplayName}}
@@ -50,7 +54,7 @@
                     </div>
                     <div class="col-sm-5">
                         <div class="input-group">
-                            <input class="form-control" placeholder="yyyy-mm-dd" name="dp" 
+                            <input class="form-control" name="dp"
                             [(ngModel)]="model.DateReceived" ngbDatepicker #d="ngbDatepicker" required>
                             <div class="input-group-append">
                                 <button class="btn btn-outline-secondary far fa-calendar" (click)="d.toggle()" type="button"></button>
@@ -60,17 +64,18 @@
                 </div>
             </div>
         </div>
-
         <div class="row mt-4">
             <div class="col-sm">
                 <i class="fas fa-bolt"></i> Required field
             </div>
             <div class="col-sm text-right">
-                <button type="submit" class="btn btn-zybach" [disabled]="!newChemigationPermitForm.form.valid || isLoadingSubmit">
+                <button type="submit" class="btn btn-zybach" [disabled]="!editChemigationPermitForm.form.valid || isLoadingSubmit">
                     <span *ngIf="isLoadingSubmit" class="fa fa-spinner loading-spinner"></span>
-                    Submit
+                    Save
                 </button>
-                <a class="btn btn-secondary ml-1" routerLink="/chemigation-permits">Cancel</a>
+                <a class="btn btn-secondary ml-1" routerLink="/chemigation-permits/{{chemigationPermit?.ChemigationPermitNumber}}">
+                    Cancel
+                </a>
             </div>
         </div>
     </form>
