--- a/Source/Zybach.Web/src/app/pages/chemigation-new-permit/chemigation-new-permit.component.html
+++ b/Source/Zybach.Web/src/app/pages/chemigation-new-permit/chemigation-new-permit.component.html
@@ -58,20 +58,22 @@
                         </div>
                     </div>
                 </div>
+                <div class="form-group mt-4">
+                    <div class="col-sm-5">
+                        <div class="col-sm-3">
+                            <i class="fas fa-bolt"></i> Required field
+                        </div>
+                        <div class="col-sm text-right">
+                            <button type="submit" class="btn btn-zybach" [disabled]="!newChemigationPermitForm.form.valid || isLoadingSubmit">
+                                <span *ngIf="isLoadingSubmit" class="fa fa-spinner loading-spinner"></span>
+                                Submit
+                            </button>
+                            <a class="btn btn-secondary ml-1" routerLink="/chemigation-permits">Cancel</a>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
 
-        <div class="row mt-4">
-            <div class="col-sm">
-                <i class="fas fa-bolt"></i> Required field
-            </div>
-            <div class="col-sm text-right">
-                <button type="submit" class="btn btn-zybach" [disabled]="!newChemigationPermitForm.form.valid || isLoadingSubmit">
-                    <span *ngIf="isLoadingSubmit" class="fa fa-spinner loading-spinner"></span>
-                    Submit
-                </button>
-                <a class="btn btn-secondary ml-1" routerLink="/chemigation-permits">Cancel</a>
-            </div>
-        </div>
     </form>
 </div>
