fixed error handling for model state invalid: TRS and permit number must be unique, cleaned up form appearance

--- a/Source/Zybach.Web/src/app/pages/chemigation-new-permit/chemigation-new-permit.component.html
+++ b/Source/Zybach.Web/src/app/pages/chemigation-new-permit/chemigation-new-permit.component.html
@@ -13,7 +13,7 @@
             <div class="col">
                 <div class="form-group mt-4">
                     <div class="col-sm-3 control-label text-left">
-                        <label class="required"><strong>Chemigation Permit Number</strong></label>
+                        <label class="required"><strong>Chemigation Permit Number: </strong></label>
                     </div>
                     <div class="col-sm-5">
                         <input type="text" class="form-control" name="ChemigationPermitNumber"
@@ -22,7 +22,7 @@
                 </div>
                 <div class="form-group mt-4">
                     <div class="col-sm-3 control-label text-left">
-                        <label class="required"><strong>Township-Range-Section</strong></label>
+                        <label class="required"><strong>Township-Range-Section: </strong></label>
                     </div>
                     <div class="col-sm-5">
                         <input type="text" class="form-control" name="TownshipRangeSection"
@@ -31,7 +31,7 @@
                 </div>
                 <div class="form-group mt-4">
                     <div class="col-sm-3 control-label text-left">
-                        <p class="mb-0"> <label class="required"><strong>Permit Status</strong></label></p>
+                        <p class="mb-0"> <label class="required"><strong>Permit Status: </strong></label></p>
                     </div>
                     <div class="col-sm-5">
                         <select name="PermitStatusID" class="form-control" [(ngModel)]="model.ChemigationPermitStatusID"
@@ -46,7 +46,7 @@
                 </div>
                 <div class="form-group mt-4">
                     <div class="col-sm-3 control-label text-left">
-                        <p class="mb-0"> <label class="required"><strong>Date Received</strong></label></p>
+                        <p class="mb-0"> <label class="required"><strong>Date Received: </strong></label></p>
                     </div>
                     <div class="col-sm-5">
                         <div class="input-group">
@@ -60,7 +60,7 @@
                 </div>
                 <div class="form-group mt-4">
                     <div class="col-sm-5">
-                        <div class="col-sm-3">
+                        <div class="col-sm">
                             <i class="fas fa-bolt"></i> Required field
                         </div>
                         <div class="col-sm text-right">
