--- a/Source/Zybach.Web/src/app/pages/chemigation-permit-edit/chemigation-permit-edit.component.html
+++ b/Source/Zybach.Web/src/app/pages/chemigation-permit-edit/chemigation-permit-edit.component.html
@@ -18,7 +18,7 @@
             <div class="col">  
                 <div class="form-group mt-4">
                     <div class="col-sm-3 control-label">
-                        <label class="required"><strong>Chemigation Permit Number</strong></label>
+                        <label class="required"><strong>Chemigation Permit Number: </strong></label>
                     </div>
                     <div class="col-sm-5">
                         <input type="text" class="form-control" name="ChemigationPermitNumber" readonly
@@ -27,7 +27,7 @@
                 </div>
                 <div class="form-group mt-4">
                     <div class="col-sm-3 control-label text-left">
-                        <label class="required"><strong>Township-Range-Section</strong></label>
+                        <label class="required"><strong>Township-Range-Section: </strong></label>
                     </div>
                     <div class="col-sm-5">
                         <input type="text" class="form-control" name="TownshipRangeSection" readonly
@@ -36,7 +36,7 @@
                 </div>
                 <div class="form-group mt-4">
                     <div class="col-sm-3 control-label text-left">
-                        <p class="mb-0"> <label class="required"><strong>Permit Status</strong></label></p>
+                        <p class="mb-0"> <label class="required"><strong>Permit Status: </strong></label></p>
                     </div>
                     <div class="col-sm-5">
                         <select name="PermitStatusID" class="form-control" [(ngModel)]="model.ChemigationPermitStatusID"
@@ -50,7 +50,7 @@
                 </div>
                 <div class="form-group mt-4">
                     <div class="col-sm-3 control-label text-left">
-                        <p class="mb-0"> <label class="required"><strong>Date Received</strong></label></p>
+                        <p class="mb-0"> <label class="required"><strong>Date Received: </strong></label></p>
                     </div>
                     <div class="col-sm-5">
                         <div class="input-group">
